--- a/classes.html
+++ b/classes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- This website template was created by: Student's Name, Today's Date -->
+<!-- This website template was created by: MaKayla Polak 09/19/22 -->
 <html lang="en">
 
 <head>
@@ -16,15 +16,29 @@
 
 <body>
 
+	<!-- Mobile Nav -->
+	<nav class="mobile-nav">
+			<div id="menu-links">
+					<a href="index.html">Home</a>
+					<a href="about.html">About Us</a>
+					<a href="classes.html">Classes</a>
+					<a href="nutrition.html">Nutrition</a>
+					<a href="contact.html">Contact Us</a>
+			</div>
+			<a class="menu-icon" onclick="hamburger()">
+				<div> &#9776;</div>
+			</a>
+	</nav>
+
 	<div id="container">
 
 		<!-- Use the header area for the website name or logo -->
-		<header>
+		<header id="ffc-logo">
 			<a href="index.html"><img src="images/forward-fitness-logo.png" alt="Forward Fitness Club logo" height="220" width="297"></a>
 		</header>
 
-		<!-- Use the nav area to add hyperlinks to other pages within the website -->
-		<nav>
+		<!-- Tablet, Desktop Nav -->
+		<nav class="tablet-desktop">
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About Us</a></li>
@@ -138,6 +152,8 @@
 		</footer>
 
 	</div>
+
+	<script src="script.js"></script>
 
 </body>
 
